--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <img src="img/person3.jpg" alt="" class="content_imgWrap_pic">
                             </div>
                             <div class="content_name">Денис Капралов</div>
-                            <div class="content_prof">Журнались</div>             
+                            <div class="content_prof">Журналист</div>             
                         </div>
                         <div class="content_text">“Пользуясь случаем хочу выразить огромную благодарность врачу стоматологу Грауверг Виктору Викторовичу! За высокий профессионализм, ответственность, чуткость к каждому пациенту! И конечно же поздравить с наступающим праздником!”</div>
                     </div>
