--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="wrapper">
             <div class="nav_logo">Trafalgar</div>
             <div class="nav_menu">
-                <a href='#header' class="nav_menu_link">Дом</a>
+                <a href='#header' class="nav_menu_link">Начало</a>
                 <a href='#services' class="nav_menu_link">Найти доктора</a>
                 <a href='#download' class="nav_menu_link">Приложение</a>
                 <a href='#reviews' class="nav_menu_link">Отзывы</a>
